# lorp-v3

./: .gitignore  README.md  app_capacity_repair_solver.py  audit_missing_dat.py  benchmarking_instancias_lor_pyvrp.py  capacity_audit.py  capacity_repair.py  da_candidate_pool.py  da_geometry.py  dat_loader.py  debug_first_instance.py  demo_capacity_repair_row.py  export_fsd_minimal.py  instance_adapter.py  instance_resolver.py  lor_pyvrp_benchmark.py  plot_batch_results.py  plot_capacity_repair_cases.py  plot_sample_resolved_instances.py  pyproject.toml  pyvrp_model.py  reporting.py  results_MILP.xlsx  run_capacity_repair_batch.py  run_first5_instances.py  run_fsd_batch.py  run_fsd_first10_iteration.py  run_pipeline.py  viz.py  watch_csv_and_plot.py  xlsx_loader.py
docs/: APP_WORK_SESSION_20260608.md  COMPARE10_HARD_FORBID_VS_TABU_PENALTY.md  C_CONGRUENCY_TEST.md  C_SOLVER_AUDIT.md  FIRST20_MILP_VS_PYVRP_RESULTS_20260608.md  FULL_IMPLEMENTATION_AUDIT_20260608.md  HANDOFF_2026_06_08_MORNING.md  HANDOFF_C_CONGRUENCY_PHASE.md  HANDOFF_INTERACTIVE_APP_20260608.md  HANDOFF_PHASE1_PREPROCESSING.md  HANDOFF_PHASE2_PYVRP_BUILDER.md  HANDOFF_PHASE3_PARSER_AUDIT.md  HANDOFF_PHASE4_REPAIR.md  HANDOFF_PHASE5_ROW_RUNNER_ARTIFACTS.md  HANDOFF_PHASE6_BATCH.md  HANDOFF_PHASE7A_SAMPLE_ASSESSMENT.md  HANDOFF_PHASE7_REPAIR_SAFETY.md  HANDOFF_TO_NEXT_AGENT_PHASE6_BATCH.md  IMPLEMENTATION_PLAN.md  INTERACTIVE_APP_QUICKSTART.md  MODELO_LOGICA_COMPLETA_ES.md  NEXT_AGENT_RULES.md  OPERATIONAL_LOGIC_FOR_PROFESSOR.md  PHASE7_ROUTE_LENGTH_REPAIR_DESIGN.md  PHASE8_REPAIR_PENALTY_TABU_HTML_SPEC.md  PHASE8_REPORTING_UI_C_VALIDATION_SPEC.md  PHASE9_STATUS_AND_RUN_PLAN_20260608.md  PYVRP_REPLICATION_SPEC.md  README.md  WHAT_WE_HAVE_BUILT_ASSESSMENT.md  change_history.md  dat_loader.md  instance_adapter.md  lor_pyvrp_benchmark.md  pipeline.md  pyvrp_integration.md  refactor_plan.md  xlsx_loader.md
docs/adr/: 0001-c-pyvrp-congruency.md  0002-da-as-artificial-one-client-vehicle.md  0003-relax-and-repair-shared-depot-capacity.md  0004-hard-forbid-vs-soft-penalty-repair.md  0005-static-html-reporting.md
reference/LoRPSD/: CMakeLists.txt  LKH  LoRPSD  Makefile  bash_LoRP.sh  createsummary.sh  filename.lp  files.cpp  files.h  functions.cpp  functions.h  initial.cpp  initial.h  main.cpp  models.cpp  models.h  startJob.sh  stcmodels.cpp  stcmodels.h  submit_all_cvar.sh
reference/LoRPSD/cmake/: FindGUROBI.cmake
reference/LoRPSD/tuning/: Salida.txt  forbidden.txt  parameters-llrp.txt  path.txt  scenario.txt  target-runner  targetvalues_mdccvrp.txt
scripts/: compare_sample_runs.py  compare_with_milp.py  make_row_html.py  run_first_n.py  run_full_excel.py  run_random_sample.py  run_row.py  run_row_report.py
src/lorp_fsd/: __init__.py  artifacts.py  batch.py  capacity_audit.py  cost_reconstruction.py  da_options.py  dat_parser.py  excel_loader.py  experiment_config.py  facility_sizing.py  feasibility.py  geometry.py  html_report.py  instance.py  penalty_tabu.py  plotting.py  pyvrp_builder.py  repair.py  runner.py  scaling.py  solution_parser.py
tests/: conftest.py  test_artifacts.py  test_batch.py  test_da_geometry.py  test_da_options.py  test_dat_loader.py  test_dat_parser.py  test_excel_loader.py  test_experiment_config.py  test_facility_sizing.py  test_html_report.py  test_instance.py  test_instance_adapter.py  test_penalty_tabu.py  test_phase3_audit.py  test_phase7_repair_safety.py  test_pyvrp_builder.py  test_repair_savings.py  test_reporting.py  test_runner.py  test_scaling.py  test_xlsx_loader.py
